--- a/JoJo.html
+++ b/JoJo.html
@@ -11,7 +11,7 @@
 
 		<div class="col-lg-auto col-md-auto col-sm-auto logo">
 		<a href="index.html"> 
-		<img src="https://assets.stickpng.com/images/6136264df5966900044cbf71.png" style="height:90px" /></a>
+		<img src="https://download.logo.wine/logo/Crunchyroll/Crunchyroll-Logo.wine.png" style="height:90px" /></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
@@ -33,7 +33,7 @@
 </div>
 
 <div id="slider-container" class="row" content="width=device-width , height=500px " ->
-        <img src="https://static.wikia.nocookie.net/jjba/images/5/55/GoldenWind-Promo.png/revision/latest?cb=20180930190706" style="margin:20px; height:400; width: 300"> 
+        <img src="https://m.media-amazon.com/images/I/7128HHk1h3L.jpg" style="margin:20px; height:400; width: 300"> 
 		<div class="col-lg-6 col-md-6 col-sm-10 content-container" > <h2 style="font-size: 20">
 								 <b> Name: JoJo's Bizarre Adventure </b>  </br>
 								  <b> User-Rating: 9.5</b>  <br/>
