--- a/chainsawman.html
+++ b/chainsawman.html
@@ -11,7 +11,7 @@
 
 		<div class="col-lg-auto col-md-auto col-sm-auto logo">
 		<a href="index.html"> 
-		<img src="https://assets.stickpng.com/images/6136264df5966900044cbf71.png" style="height:90px" /></a>
+		<img src="https://download.logo.wine/logo/Crunchyroll/Crunchyroll-Logo.wine.png" style="height:90px" /></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
@@ -19,7 +19,7 @@
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
-		<a href="About_Us.html" target="_blank"><b> About</b></a>
+		<a href="about_us.html" target="_blank"><b> About</b></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
@@ -27,7 +27,7 @@
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
-		<a href="support us.html"> <b> support us </b></a>
+		<a href="supportus.html"> <b> support us </b></a>
 	</div>
 
 </div>
