--- a/JoJo.html
+++ b/JoJo.html
@@ -19,7 +19,7 @@
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
-		<a href="About_Us.html" target="_blank"><b> About</b></a>
+		<a href="about_us.html" target="_blank"><b> About</b></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
