--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		
 		
 		<a href = "JoJo.html"> <!-- Jojo -->
-        <img class="row__poster row__posterLarge" src="https://static.wikia.nocookie.net/jjba/images/5/55/GoldenWind-Promo.png/revision/latest?cb=20180930190706" alt="" />
+        <img class="row__poster row__posterLarge" src="https://download.logo.wine/logo/Crunchyroll/Crunchyroll-Logo.wine.png" alt="" />
 		
 		<a href = "DemonSlayer.html"> <!-- Demon slayer -->
         <img class="row__poster row__posterLarge" src="https://m.media-amazon.com/images/M/MV5BODI2NjdlYWItMTE1ZC00YzI2LTlhZGQtNzE3NzA4MWM0ODYzXkEyXkFqcGdeQXVyNjU1OTg4OTM@._V1_.jpg" alt="" /> </a>
