--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
-		<a href="About_Us.html" target="_blank"><b> About</b></a>
+		<a href="about_us.html" target="_blank"><b> About</b></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
@@ -28,7 +28,7 @@
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
-		<a href="support us.html"> <b> support us </b></a>
+		<a href="supportus.html"> <b> support us </b></a>
 	</div>
 
 </div>
