--- a/MobPsycho.html
+++ b/MobPsycho.html
@@ -15,7 +15,7 @@
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
-		<a href="Index.html" target="_blank"><b>Main Page</b></a>
+		<a href="index.html" target="_blank"><b>Main Page</b></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
