--- a/DemonSlayer.html
+++ b/DemonSlayer.html
@@ -10,12 +10,12 @@
 <div id="top-container" class="row">
 
 		<div class="col-lg-auto col-md-auto col-sm-auto logo">
-		<a href="Index.html"> 
+		<a href="index.html"> 
 		<img src="https://download.logo.wine/logo/Crunchyroll/Crunchyroll-Logo.wine.png" style="height:90px" /></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
-		<a href="Index.html" target="_blank"><b>Main Page</b></a>
+		<a href="index.html" target="_blank"><b>Main Page</b></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
