--- a/MobPsycho.html
+++ b/MobPsycho.html
@@ -10,7 +10,7 @@
 <div id="top-container" class="row">
 
 		<div class="col-lg-auto col-md-auto col-sm-auto logo">
-		<a href="Index.html"> 
+		<a href="index.html"> 
 		<img src="https://download.logo.wine/logo/Crunchyroll/Crunchyroll-Logo.wine.png" style="height:90px" /></a>
 	</div>
 
