--- a/supportus.html
+++ b/supportus.html
@@ -11,7 +11,7 @@
 
 		<div class="col-lg-auto col-md-auto col-sm-auto logo">
 		<a href="index.html"> 
-		<img src="https://assets.stickpng.com/images/6136264df5966900044cbf71.png" style="height:90px" /></a>
+		<img src="https://download.logo.wine/logo/Crunchyroll/Crunchyroll-Logo.wine.png" style="height:90px" /></a>
 	</div>
 
 		<div class="col-lg-auto col-md-auto col-sm-auto menu">
