Changed a's place for jojo

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		
 		
 		<a href = "JoJo.html"> <!-- Jojo -->
-        <img class="row__poster row__posterLarge" src="https://m.media-amazon.com/images/I/7128HHk1h3L.jpg" alt="" />
+        <img class="row__poster row__posterLarge" src="https://m.media-amazon.com/images/I/7128HHk1h3L.jpg" alt="" />	</a>
 		
 		<a href = "DemonSlayer.html"> <!-- Demon slayer -->
         <img class="row__poster row__posterLarge" src="https://m.media-amazon.com/images/M/MV5BODI2NjdlYWItMTE1ZC00YzI2LTlhZGQtNzE3NzA4MWM0ODYzXkEyXkFqcGdeQXVyNjU1OTg4OTM@._V1_.jpg" alt="" /> </a>
@@ -66,7 +66,7 @@
 		
 		
 		
-		</a>
+	
       </div>
     </div>
 
